[package]
edition = "2018"
name = "neo-rust"
version = "0.1.0"
authors = ["simonalong"]
description = "neo-rust: orm framework, is a simplified sql tool based on sqlx+tokio"
license = "Apache-2.0"
repository = "https://github.com/simonalong/neo-rust"

[dependencies]
# 异步框架
tokio = { version = "1.12.0", features = ["full"] }

# 序列化框架
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库处理框架
sqlx = { version = "0.5.9", features = ["mysql", "postgres", "sqlite", "runtime-tokio-rustls"] }

# concurrent hashmap
dashmap = "4.0.2"

flurry = "0.3.1"

chashmap = "2.2.2"
